--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -127,7 +127,6 @@ sonata_admin:
         dashboard: '@SonataAdmin/Core/dashboard.html.twig'
 
 
-                    
 sonata_block:
     default_contexts: [cms]
     blocks:
@@ -194,17 +193,8 @@ sonata_media:
         gallery: Application\Sonata\MediaBundle\Entity\Gallery
         gallery_has_media: Application\Sonata\MediaBundle\Entity\GalleryHasMedia
 
+white_october_breadcrumbs: ~
 
-white_october_breadcrumbs:
-    separator:          '/'
-    separatorClass:     'separator'
-    listId:             'wo-breadcrumbs'
-    listClass:          'breadcrumb'
-    itemClass:          ''
-    linkRel:            ''
-    locale:             ~ # defaults to null, so the default locale is used
-    translation_domain: ~ # defaults to null, so the default domain is used
-    viewTemplate:       'WhiteOctoberBreadcrumbsBundle::microdata.html.twig'
 
 easy_admin:
     site_name: 'GCF Admin'
