--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
+        "thormeier/breadcrumb-bundle": "^2.1",
         "twig/twig": "^1.0||^2.0",
         "whiteoctober/breadcrumbs-bundle": "dev-master"
     },
