--- a/src/GCF/FrontBundle/Resources/config/routing.yml
+++ b/src/GCF/FrontBundle/Resources/config/routing.yml
@@ -5,8 +5,6 @@ gcf_front_homepage:
     defaults: { _controller: GCFFrontBundle:Default:index}
 
 
-
-
 gcf_front_actorspage:
     path:     /actors
     defaults: { _controller: GCFFrontBundle:Actors:index}
@@ -15,9 +13,9 @@ gcf_front_actorssectorpage:
     path:     /actors/secteur/{id}
     defaults: { _controller: GCFFrontBundle:Actors:ActorsSector }
 
-gcf_front_getActorspage:
-    path:     /actors/get-actors/{clicked}
-    defaults: { _controller: GCFFrontBundle:Actors:gethierarchie }
+#gcf_front_getActorspage:
+#    path:     /actors/get-actors/{clicked}
+#    defaults: { _controller: GCFFrontBundle:Actors:gethierarchie }
 
 
 
@@ -32,7 +30,6 @@ gcf_front_resultprojectspage:
 gcf_front_projectsinglepage:
     path: /projects/{id}
     defaults: { _controller: GCFFrontBundle:Projects:singleProject}
-
 
 
 gcf_front_publicationspage:
