--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,6 +40,7 @@ twig:
 
     form_themes:
         - '@SonataMedia/Form/media_widgets.html.twig'
+        - '@SonataFormatter/Form/formatter.html.twig'
         
 # Doctrine Configuration
 doctrine:
@@ -195,6 +196,40 @@ sonata_media:
 
 white_october_breadcrumbs: ~
 
+sonata_formatter:
+    default_formatter: text
+    formatters:
+        markdown:
+            service: sonata.formatter.text.markdown
+            extensions:
+                - sonata.formatter.twig.control_flow
+                - sonata.formatter.twig.gist
+        #        - sonata.media.formatter.twig #keep this commented unless you are using media bundle.
+
+        text:
+            service: sonata.formatter.text.text
+            extensions:
+                - sonata.formatter.twig.control_flow
+                - sonata.formatter.twig.gist
+        #        - sonata.media.formatter.twig
+
+        rawhtml:
+            service: sonata.formatter.text.raw
+            extensions:
+                - sonata.formatter.twig.control_flow
+                - sonata.formatter.twig.gist
+        #        - sonata.media.formatter.twig
+
+        richhtml:
+            service: sonata.formatter.text.raw
+            extensions:
+                - sonata.formatter.twig.control_flow
+                - sonata.formatter.twig.gist
+        #        - sonata.media.formatter.twig
+
+        twig:
+            service: sonata.formatter.text.twigengine
+            extensions: [] 
 
 easy_admin:
     site_name: 'GCF Admin'
