--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "easycorp/easyadmin-bundle": "1.x-dev",
+        "friendsofsymfony/ckeditor-bundle": "1.x-dev",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/doctrine-behaviors": "1.4.1",
         "knplabs/knp-menu-bundle": "dev-master",
@@ -36,6 +37,7 @@
         "sonata-project/core-bundle": "3.x-dev",
         "sonata-project/doctrine-extensions": "1.x-dev",
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        "sonata-project/formatter-bundle": "* dev-master",
         "sonata-project/media-bundle": "3.x-dev",
         "sonata-project/translation-bundle": "3.x-dev",
         "stof/doctrine-extensions-bundle": "v1.2.2",
